--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ gevent==22.10.2; sys_platform != 'win32' and python_version > '3.10' and python_
 gevent==24.2.1 ; sys_platform != 'win32' and python_version >= '3.12'  # (Noble)
 greenlet==1.1.2 ; sys_platform != 'win32' and python_version == '3.10'  # (Jammy)
 greenlet==2.0.2 ; sys_platform != 'win32' and python_version > '3.10' and python_version < '3.12'
-greenlet==3.0.3 ; sys_platform != 'win32' and python_version >= '3.12'  # (Noble)
+# greenlet==3.0.3 ; sys_platform != 'win32' and python_version >= '3.12'  # (Noble)
+greenlet==3.1.1 ; sys_platform != 'win32' and python_version >= '3.12'
 idna==2.10 ; python_version < '3.12'  # requests 2.25.1 depends on idna<3 and >=2.5
 idna==3.6 ; python_version >= '3.12'
 Jinja2==3.0.3 ; python_version <= '3.10'
@@ -44,14 +45,16 @@ openpyxl==3.1.2 ; python_version >= '3.12'
 passlib==1.7.4 # min version = 1.7.2 (Focal with security backports)
 Pillow==9.0.1 ; python_version <= '3.10'
 Pillow==9.4.0 ; python_version > '3.10' and python_version < '3.12'
-Pillow==10.2.0 ; python_version >= '3.12'  # (Noble) Mostly to have a wheel package
+# Pillow==10.2.0 ; python_version >= '3.12'  # (Noble) Mostly to have a wheel package
+Pillow==11.1.0 ; python_version >= '3.12' 
 polib==1.1.1
 psutil==5.9.0 ; python_version <= '3.10' 
 psutil==5.9.4 ; python_version > '3.10' and python_version < '3.12' 
 psutil==5.9.8 ; python_version >= '3.12' # (Noble) Mostly to have a wheel package
 psycopg2==2.9.2 ; python_version == '3.10' # (Jammy)
 psycopg2==2.9.5 ; python_version == '3.11'
-psycopg2==2.9.9 ; python_version >= '3.12' # (Noble) Mostly to have a wheel package
+# psycopg2==2.9.9 ; python_version >= '3.12' # (Noble) Mostly to have a wheel package
+psycopg2==2.9.10 ; python_version >= '3.12'
 pyopenssl==21.0.0 ; python_version < '3.12'
 pyopenssl==24.1.0 ; python_version >= '3.12' # (Noble) min 23.2.0, pinned for compatibility with cryptography==42.0.8 and security patches
 PyPDF2==1.26.0 ; python_version <= '3.10'
